# banger

./: Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: vesion-bump.yml
banger/: main.py  utils.py
example-data/: package.json  version.js
tests/: test_utils.py
